--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <script type="module" src="./Javasript/fetch.js"></script>
+    <script type="module" src="./Javasript/Web Storage.js"></script>
     <title>Javascript</title>
 </head>
 <body>
